# stocklens

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fundamental_fetcher.py  macro.py  macro_fetcher.py  pyproject.toml  railway.json  requirements.txt  storage.py
backend/: __init__.py  log.py  main.py
backend/api/: __init__.py  report_builder.py  schemas.py  training_manager.py
backend/api/routes/: predictions.py  reports.py  signals.py  watchlist.py
backend/data/: __init__.py  storage.py
backend/data/fetchers/: __init__.py  fundamental_fetcher.py  macro_fetcher.py  price_fetcher.py  sentiment_fetcher.py
backend/data/processors/: __init__.py  feature_pipeline.py  fundamental_features.py  macro_features.py  sentiment_features.py  target_builder.py  technical_features.py
backend/jobs/: __init__.py  scheduler.py  tasks.py
backend/models/: __init__.py  ensemble.py  explainer.py  fair_value_estimator.py  return_forecaster.py  trainer.py
backend/tests/: __init__.py  test_phase2.py
data/models/AAPL/: backtest_results.json
data/models/BRK-B/: backtest_results.json
data/models/VOO/: backtest_results.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AccuracyCallout.jsx  ConvictionBadge.jsx  ForecastFanChart.jsx  LastUpdated.jsx  MacroSidebar.jsx  PriceChart.jsx  SentimentTimeline.jsx  ShapWaterfall.jsx  ValuationBadge.jsx
frontend/src/hooks/: useApi.js
scripts/: quickstart.py  run_backtest.py  seed_data.py  setup_db.py  train_models.py  validate_phase1.py  validate_phase2.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validate_phase6.py
stocklens/backend/: config.py  main.py
(+23 files in other folders)
