[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklens"
version = "0.1.0"
description = "Stock & ETF valuation and forecasting system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data fetching
    "yfinance>=0.2.36",
    "fredapi>=0.5.1",
    "requests>=2.31.0",
    "feedparser>=6.0.11",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "scipy>=1.12.0",
    "pyarrow>=15.0.0",

    # ML / Modeling (Phase 3)
    # "xgboost>=2.0.0",
    # "lightgbm>=4.2.0",
    # "optuna>=3.5.0",
    # "shap>=0.44.0",

    # NLP / Sentiment (Phase 2)
    # "transformers>=4.37.0",
    # "torch>=2.1.0",

    # Database
    "aiosqlite>=0.19.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "optuna>=3.5.0",
    "shap>=0.44.0",
]
nlp = [
    "transformers>=4.37.0",
    "torch>=2.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
